# 2d6-dungeon-saver

./: .gitattributes  .gitignore  2D6 Rules.md  2d6-dungeon-saver.sln  Cargo.toml  README.md  RENDERER_FIX.md  Rules.md  SESSION_NOTES.md  SIGNAL_HANDLING_TEST.md  notes.md
.ai-team/: decisions.md  routing.md  team.md
.ai-team/casting/: history.json  registry.json
.ai-team/log/: 2026-02-12-phase-1-2-kickoff.md  2026-02-12-scribe-session.md
.github/agents/: squad.agent.md
.squad/: .first-run  config.json  decisions.md  routing.md  team.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
docs/: 2D6 Rules.md  Rules.md  dungeon-saver-dev-log.md
examples/: explorer_demo.rs  generate_dungeon.rs  pretty_explorer_demo.rs  pretty_room_with_doors.rs  pretty_single_room.rs  pretty_two_rooms.rs  room_with_doors.rs  single_room.rs  test_explorer_movement.rs  two_rooms.rs
maps/: .gitkeep
src/: Program.cs  export.rs  lib.rs  main.rs  rng.rs  theme.rs
src/Core/: DiceRoller.cs  DungeonBuilder.cs  ExitGenerator.cs  ExplorerAI.cs  GameLoop.cs  MapExporter.cs  Pathfinder.cs  RoomGenerator.cs
src/Models/: Dungeon.cs  Exit.cs  Explorer.cs  Room.cs
src/Rendering/: ColorTheme.cs  Renderer.cs
src/Utils/: Point.cs  Rectangle.cs
src/dungeon/: generator.rs  mod.rs  room.rs
src/explorer/: behavior.rs  mod.rs  pathfinder.rs
tests/: PROGRESSIVE_GENERATION_TESTS.md  TEST_CONVENTIONS.md  camera_rendering.rs  dungeon_generation.rs  explorer_tests.rs  integration_test.rs  progressive_generation.rs  proptest_dungeon.rs  renderer_basic.rs
(+78 files in other folders)
