[package]
name = "dungeon-saver"
version = "0.1.0"
edition = "2021"
authors = ["Frank Boucher <fboucher@outlook.com>"]
description = "A terminal-based dungeon explorer screensaver"
license = "MIT"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
rand = "0.8"
rand_chacha = "0.3"
pathfinding = "4"
chrono = "0.4"
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[dev-dependencies]
proptest = "1"
